# babel-into-unbabel

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_unbabel_cli.py
tests/inputs/: sm_input_base_case2.txt
translations_metrics/: const.py  helper.py  sma.py  wpm.py
unbabel_cli/: init_logger.py  unbabel_cli.py
utils/: datetime_diff.py  datetime_plus_minutes.py  datetime_trim.py  file_snapshot.py  str_to_datetime.py
