[tool.poetry]
name = "unbabel_cli"
version = "0.1.0"
description = "A package for exploring translations"
authors = ["alaranjeira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         
    | .git          
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unbabel_cli = "unbabel_cli.unbabel_cli:cli"